--- a/NorthWind/NorthWind.Web/Views/Categories/Index.cshtml
+++ b/NorthWind/NorthWind.Web/Views/Categories/Index.cshtml
@@ -1,8 +1,45 @@
-﻿
+﻿@model IEnumerable<NorthWind.Web.Models.Response.CategoryViewResult>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Categorias</h1>
 
+<p>
+    <a asp-action="Create">Crear nueva</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+
+            <th>
+                @Html.DisplayNameFor(model => model.CategoryName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoryName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {  id = item.CategoryID  }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.CategoryID })
+
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
