--- a/NorthWind/NorthWind.Web/Views/Categories/Create.cshtml
+++ b/NorthWind/NorthWind.Web/Views/Categories/Create.cshtml
@@ -10,7 +10,7 @@
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="CategoryName"></label>
-        <input asp-for="CategoryName" class="form-control" />
+        <input asp-for="CategoryName" class="form-control" maxlength="15"/>
         <span asp-validation-for="CategoryName" class="text-danger"></span>
     </div>
 
